--- a/tasks/core/base.yml
+++ b/tasks/core/base.yml
@@ -28,24 +28,40 @@
         ansible_connection: ssh
         ansible_ssh_private_key_file: "../key"
         ansible_ssh_extra_args: "-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null"
-
-
+        
+    - name: Wait for apt lock to be released
+      ansible.builtin.shell: |
+        while fuser /var/lib/apt/lists/lock >/dev/null 2>&1; do
+          echo "Waiting for apt lock to be released..."
+          sleep 2
+        done
+        while fuser /var/lib/dpkg/lock-frontend >/dev/null 2>&1; do
+          echo "Waiting for dpkg lock to be released..."
+          sleep 2
+        done
+      become: yes
+    
     - name: Ensure software-properties-common is installed
       ansible.builtin.apt:
         name: software-properties-common
         state: present
-
-    - name: Install qemu-guest-agent
-      ansible.builtin.shell: apt update && apt -y install qemu-guest-agent
+        update_cache: yes
       become: yes
-
-
+    
+    - name: Install qemu-guest-agent
+      ansible.builtin.apt:
+        name: qemu-guest-agent
+        state: present
+        update_cache: yes
+      become: yes
+    
     - name: Enable QEMU Guest Agent
       ansible.builtin.systemd:
         name: qemu-guest-agent
         enabled: yes
         state: started
       become: yes
+
 
 
     - name: Restart SSH service after configuration change
